Subject: Added intro description to the main jupyter notebook.

--- a/main_train.ipynb
+++ b/main_train.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Forest Growth Remote Sensing Detector <br>\n",
+    "\n",
+    "This Jupyter Notebook guides the developin"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
